--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+# ESTRATÉGIA
+spring.jpa.hibernate.ddl-auto=update
 
+# URL
+spring.datasource.url=jdbc:mysql://localhost/db_helppet?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
+
+# USER (seu usuário)
+spring.datasource.username=julio
+
+# PASSWORD (sua senha)
+spring.datasource.password=root
+
+# MOSTRAR QUERY
+spring.jpa.show-sql=true
