--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,10 +5,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost/db_helppet?createDatabaseIfNotExist=true&serverTimezone=UTC&useSSl=false
 
 # USER (seu usuário)
-spring.datasource.username=root
+spring.datasource.username=julio
 
 # PASSWORD (sua senha)
-spring.datasource.password=
+spring.datasource.password=root
 
 # MOSTRAR QUERY
 spring.jpa.show-sql=true
