--- a/backend/bin/pom.xml
+++ b/backend/bin/pom.xml
@@ -68,6 +68,17 @@
 			<version>2.9.2</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.10</version>
+		</dependency>                                                                                       
+		
 	</dependencies>
 
 	<build>
